--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
       justify-content: center;
     }
     #snake-canvas {
-      border: 2px solid #0ff;
+      touch-action: none;
+      max-width: 150px;
+      max-height: 150px;
+      border: 4px solid #0ff;
       border-radius: 4px;
       box-shadow: 0 0 10px #0ff;
     }
@@ -190,7 +193,7 @@
       box-shadow: 0 0 10px #f00, inset 0 0 4px #fff;
       transition: all 0.2s;
       text-transform: uppercase;
-      font-size: clamp(0.8rem, 2vw, 0.9rem);
+      font-size: clamp(0.4rem, 0.7vw, 0.5rem);
       border: 2px solid #000;
       margin-top: 10px;
     }
@@ -303,9 +306,16 @@
           <p>More games coming soon!</p>
         </div>
       </div>
+      <div id="snake-leaderboard" style="margin-top:10px; text-align:center; display:none;">
+          <h3 style="color:#0ff;">Leaderboard</h3>
+          <ol id="leaderboard-list" style="color:#fff; padding-left: 1.5em;"></ol>
+        </div>
       <div class="secret-game">
         <canvas id="snake-canvas" width="300" height="300"></canvas>
-        <button class="back-btn" id="back-btn">Back to Menu</button>
+        <div style="display: flex; gap: 10px; justify-content: center; margin-top: 10px;">
+          <button class="back-btn" id="back-btn">Back to Menu</button>
+          <button class="back-btn" id="start-btn">Start</button>
+        </div>
       </div>
     </div>
     <div class="controls">
@@ -325,9 +335,11 @@
     const gameList = document.querySelector('.game-list');
     const secretGame = document.querySelector('.secret-game');
     const backBtn = document.getElementById('back-btn');
+    const leaderboard = document.getElementById('snake-leaderboard');
     let selectedIndex = 0;
     const konamiCode = ['ArrowUp', 'ArrowDown', 'ArrowUp', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight'];
     let inputSequence = [];
+    let snakeInterval = null;
 
     function updateSelection() {
       gameCards.forEach((card, index) => {
@@ -372,10 +384,37 @@
     function startSecretGame() {
       gameList.classList.remove('active');
       secretGame.classList.add('active');
+      leaderboard.style.display = 'block';
       initSnakeGame();
     }
 
+    function getLeaderboard() {
+      const scores = JSON.parse(localStorage.getItem('snakeLeaderboard') || '[]');
+      return scores;
+    }
+
+    function saveLeaderboard(scores) {
+      localStorage.setItem('snakeLeaderboard', JSON.stringify(scores));
+    }
+
+    function updateLeaderboardDisplay() {
+      const scores = getLeaderboard();
+      const list = document.getElementById('leaderboard-list');
+      list.innerHTML = '';
+      scores.slice(0, 5).forEach((score, i) => {
+        const li = document.createElement('li');
+        li.textContent = `${score} pts`;
+        list.appendChild(li);
+      });
+    }
+
     function initSnakeGame() {
+      // Clear previous interval if exists
+      if (snakeInterval) {
+        clearInterval(snakeInterval);
+        snakeInterval = null;
+      }
+
       const canvas = document.getElementById('snake-canvas');
       const ctx = canvas.getContext('2d');
       const gridSize = 20;
@@ -389,6 +428,18 @@
       function drawGame() {
         ctx.fillStyle = '#000';
         ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+        // Draw faint instructions
+        ctx.save();
+        ctx.globalAlpha = 0.18; // Faint transparency
+        ctx.fillStyle = '#fff';
+        ctx.font = '14px Press Start 2P, Arial, sans-serif';
+        ctx.textAlign = 'center';
+        ctx.textBaseline = 'middle';
+        ctx.fillText('WASD or Swipe', canvas.width / 2, canvas.height / 2 - 10);
+        ctx.fillText('Tap Start to Restart', canvas.width / 2, canvas.height / 2 + 16);
+        ctx.restore();
+
         ctx.fillStyle = '#0ff';
         snake.forEach(segment => {
           ctx.fillRect(segment.x * gridSize, segment.y * gridSize, gridSize - 2, gridSize - 2);
@@ -397,12 +448,26 @@
         ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 2, gridSize - 2);
         ctx.fillStyle = '#fff';
         ctx.font = '16px Press Start 2P';
+        ctx.textAlign = 'left';
+        ctx.textBaseline = 'top';
         ctx.fillText(`Score: ${score}`, 10, 20);
       }
 
       function updateGame() {
         const head = { x: snake[0].x + dx, y: snake[0].y + dy };
-        if (head.x < 0 || head.x >= tileCount || head.y < 0 || head.y >= tileCount || snake.some(segment => segment.x === head.x && segment.y === head.y)) {
+        if (
+          head.x < 0 || head.x >= tileCount ||
+          head.y < 0 || head.y >= tileCount ||
+          snake.some(segment => segment.x === head.x && segment.y === head.y)
+        ) {
+          // Save score to leaderboard if > 0
+          if (score > 0) {
+            let scores = getLeaderboard();
+            scores.push(score);
+            scores = scores.sort((a, b) => b - a).slice(0, 1); // Keep only the top score
+            saveLeaderboard(scores);
+            updateLeaderboardDisplay();
+          }
           snake = [{ x: 10, y: 10 }];
           dx = 0;
           dy = 0;
@@ -421,14 +486,41 @@
 
       document.addEventListener('keydown', (e) => {
         if (secretGame.classList.contains('active')) {
-          if (e.key === 'ArrowUp' && dy === 0) { dx = 0; dy = -1; }
-          else if (e.key === 'ArrowDown' && dy === 0) { dx = 0; dy = 1; }
-          else if (e.key === 'ArrowLeft' && dx === 0) { dx = -1; dy = 0; }
-          else if (e.key === 'ArrowRight' && dx === 0) { dx = 1; dy = 0; }
+          if ((e.key === 'ArrowUp' || e.key === 'w') && dy === 0) { dx = 0; dy = -1; }
+          else if ((e.key === 'ArrowDown' || e.key === 's') && dy === 0) { dx = 0; dy = 1; }
+          else if ((e.key === 'ArrowLeft' || e.key === 'a') && dx === 0) { dx = -1; dy = 0; }
+          else if ((e.key === 'ArrowRight' || e.key === 'd') && dx === 0) { dx = 1; dy = 0; }
         }
       });
 
-      setInterval(updateGame, 100);
+      let touchStartX = null, touchStartY = null;
+      canvas.addEventListener('touchstart', function(e) {
+        const touch = e.touches[0];
+        touchStartX = touch.clientX;
+        touchStartY = touch.clientY;
+      });
+      canvas.addEventListener('touchmove', function(e) {
+        if (touchStartX === null || touchStartY === null) return;
+        const touch = e.touches[0];
+        const dxTouch = touch.clientX - touchStartX;
+        const dyTouch = touch.clientY - touchStartY;
+        if (Math.abs(dxTouch) > Math.abs(dyTouch)) {
+          if (dxTouch > 20 && dx === 0) { dx = 1; dy = 0; }
+          else if (dxTouch < -20 && dx === 0) { dx = -1; dy = 0; }
+        } else {
+          if (dyTouch > 20 && dy === 0) { dx = 0; dy = 1; }
+          else if (dyTouch < -20 && dy === 0) { dx = 0; dy = -1; }
+        }
+        touchStartX = null;
+        touchStartY = null;
+      });
+      canvas.addEventListener('touchend', function() {
+        touchStartX = null;
+        touchStartY = null;
+      });
+
+      // Start the game loop and save the interval id
+      snakeInterval = setInterval(updateGame, 100);
     }
 
     document.getElementById('up-btn').addEventListener('click', () => {
@@ -452,9 +544,15 @@
     backBtn.addEventListener('click', () => {
       secretGame.classList.remove('active');
       gameList.classList.add('active');
+      leaderboard.style.display = 'none';
       inputSequence = [];
       selectedIndex = 0;
       updateSelection();
+    });
+
+    document.getElementById('start-btn').addEventListener('click', () => {
+      // Reset and start the snake game
+      initSnakeGame();
     });
 
     document.addEventListener('keydown', (e) => {
