Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -258,51 +258,51 @@
     <div class="marquee">NifftySwiggle Arcade</div>
     <div class="arcade-screen">
       <div class="game-list active">
-        <div class="game-card" data-href="./games/Chess/Chess.html">
+        <div class="game-card" data-href="../games/Chess/Chess.html">
           <h2>Chess</h2>
           <p>Original chess</p>
         </div>
-        <div class="game-card" data-href="./games/ChessPuzzle/ChessPuzzle.html">
+        <div class="game-card" data-href="../games/ChessPuzzle/ChessPuzzle.html">
           <h2>Puzzle Creator</h2>
           <p>Create Chess Puzzles</p>
         </div>
-        <div class="game-card" data-href="./games/BitBounce/BitBounce.html">
+        <div class="game-card" data-href="../games/BitBounce/BitBounce.html">
           <h2>Bit Bounce</h2>
           <p>Classic jumper game</p>
         </div>
-        <div class="game-card" data-href="./games/BitShooter/BitShooter.html">
+        <div class="game-card" data-href="../games/BitShooter/BitShooter.html">
           <h2>Bit Shooter</h2>
           <p>Shoot them all</p>
         </div>
-        <div class="game-card" data-href="./games/BitInvaders/BitInvaders.html">
+        <div class="game-card" data-href="../games/BitInvaders/BitInvaders.html">
           <h2>Bit Invaders</h2>
           <p>Arcade shooter</p>
         </div>
-        <div class="game-card" data-href="./games/BitBurst/BitBurst.html">
+        <div class="game-card" data-href="../games/BitBurst/BitBurst.html">
           <h2>Bit Burst</h2>
           <p>Break all the platforms</p>
         </div>
-        <div class="game-card" data-href="./games/BitDodger/BitDodger.html">
+        <div class="game-card" data-href="../games/BitDodger/BitDodger.html">
           <h2>Bit Dodger</h2>
           <p>Dodge the blocks</p>
         </div>
-        <div class="game-card" data-href="./games/BitRunner/BitRunner.html">
+        <div class="game-card" data-href="../games/BitRunner/BitRunner.html">
           <h2>Bit Runner</h2>
           <p>Run and jump</p>
         </div>
-        <div class="game-card" data-href="./games/BitDigger/BitDigger.html">
+        <div class="game-card" data-href="../games/BitDigger/BitDigger.html">
           <h2>Bit Digger</h2>
           <p>Dig the dirt</p>
         </div>
-        <div class="game-card" data-href="./games/CleanOcean/CleanOcean.html">
+        <div class="game-card" data-href="../games/CleanOcean/CleanOcean.html">
           <h2>Mother Gaia</h2>
           <p>Fish out trash from the sea</p>
         </div>
-        <div class="game-card" data-href="./games/rescue them/rescuethem.html">
+        <div class="game-card" data-href="../games/rescue them/rescuethem.html">
           <h2>Rescue Them</h2>
           <p>Save all the pets</p>
         </div>
-        <div class="game-card" data-href="./index.html">
+        <div class="game-card" data-href="../index.html">
           <h2>More</h2>
           <p>More games coming soon!</p>
         </div>
@@ -592,4 +592,5 @@
   </script>
 </body>
 </html>
+
 
